...
                    android:visibility="gone"
                    tools:text="John Doe"
                    tools:visibility="visible" />

                <!-- New Note Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newNoteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_note"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/orange_primary"
                    android:paddingStart="24dp"
...
